// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders a list of results including vehicles and ghosts 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <div
        className="m-card m-card--white m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__top-row"
          >
            <div
              className="m-card__title"
            >
              39_X headsign
            </div>
          </div>
          <div
            className="m-card__contents"
          >
            <table
              className="m-card__properties"
            >
              <tbody>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r0:"
                    scope="row"
                  >
                    Run
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r0:"
                    className="m-card__properties-value"
                  >
                    123-0123
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </button>
      </div>
    </li>
    <li>
      <div
        className="m-card m-card--white m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__top-row"
          >
            <div
              className="m-card__title"
            >
              39_X Forest Hills
            </div>
          </div>
          <div
            className="m-card__contents"
          >
            <table
              className="m-card__properties"
            >
              <tbody>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r1:"
                    scope="row"
                  >
                    Run
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r1:"
                    className="m-card__properties-value"
                  >
                    run-1
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r2:"
                    scope="row"
                  >
                    Vehicle
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r2:"
                    className="m-card__properties-value"
                  >
                    v1-label
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r3:"
                    scope="row"
                  >
                    Operator
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r3:"
                    className="m-card__properties-value m-card__properties-value--sensitive fs-mask"
                  >
                    PATTI SMITH #op1
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r4:"
                    scope="row"
                  >
                    Last Login
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r4:"
                    className="m-card__properties-value"
                  >
                    4 hr 3 min; 1:38 PM
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`SearchResults renders a selected result card 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <div
        className="m-card m-card--white m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__top-row"
          >
            <div
              className="m-card__title"
            >
              1_ headsign
            </div>
          </div>
          <div
            className="m-card__contents"
          >
            <table
              className="m-card__properties"
            >
              <tbody>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:ri:"
                    scope="row"
                  >
                    Run
                  </th>
                  <td
                    aria-labelledby="card-property-label-:ri:"
                    className="m-card__properties-value"
                  >
                    123-0123
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </button>
      </div>
    </li>
    <li>
      <div
        className="m-card m-card--white m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__top-row"
          >
            <div
              className="m-card__title"
            >
              39_X Forest Hills
            </div>
          </div>
          <div
            className="m-card__contents"
          >
            <table
              className="m-card__properties"
            >
              <tbody>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:rj:"
                    scope="row"
                  >
                    Run
                  </th>
                  <td
                    aria-labelledby="card-property-label-:rj:"
                    className="m-card__properties-value"
                  >
                    run-1
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:rk:"
                    scope="row"
                  >
                    Vehicle
                  </th>
                  <td
                    aria-labelledby="card-property-label-:rk:"
                    className="m-card__properties-value"
                  >
                    v1-label
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:rl:"
                    scope="row"
                  >
                    Operator
                  </th>
                  <td
                    aria-labelledby="card-property-label-:rl:"
                    className="m-card__properties-value m-card__properties-value--sensitive fs-mask"
                  >
                    WILL SMITH #op1
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:rm:"
                    scope="row"
                  >
                    Last Login
                  </th>
                  <td
                    aria-labelledby="card-property-label-:rm:"
                    className="m-card__properties-value"
                  >
                    4 hr 3 min; 1:38 PM
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`SearchResults renders no results 1`] = `
<div
  className="m-search-results"
>
  <div
    className="m-search-results__none"
  >
    <div
      className="m-search-results__heading"
    >
      No Search Results
    </div>
    <p>
      There were no matching results found for “
      test
      ”. Please try again using numbers or last names only.
    </p>
    <p>
      Please note that at this time search is limited to active vehicles and logged-in personnel.
    </p>
    <button
      className="m-search-results__clear-search-button"
      onClick={[Function]}
    >
      Clear search
    </button>
  </div>
</div>
`;

exports[`SearchResults shows the new badge for vehicle that have logged in within the past 30 minutes 1`] = `
<div
  className="m-search-results"
>
  <ul
    className="m-search-results__list"
  >
    <li>
      <div
        className="m-card m-card--white m-card--read"
      >
        <button
          className="m-card__left"
          onClick={[Function]}
        >
          <div
            className="m-card__top-row"
          >
            <div
              className="m-card__title"
            >
              39_X Forest Hills
            </div>
          </div>
          <div
            className="m-card__contents"
          >
            <div
              className="m-search-results__card-new-badge"
            >
              <span
                className="m-search-results__card-new-badge-label"
              >
                New
              </span>
              <span
                className="m-search-results__card-new-badge-icon"
              >
                <svg
                  viewBox="0 0 9 9"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="4.5"
                    cy="4.5"
                    r="4.5"
                  />
                </svg>
              </span>
            </div>
            <table
              className="m-card__properties"
            >
              <tbody>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r5:"
                    scope="row"
                  >
                    Run
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r5:"
                    className="m-card__properties-value"
                  >
                    run-1
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r6:"
                    scope="row"
                  >
                    Vehicle
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r6:"
                    className="m-card__properties-value"
                  >
                    v1-label
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r7:"
                    scope="row"
                  >
                    Operator
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r7:"
                    className="m-card__properties-value m-card__properties-value--sensitive fs-mask"
                  >
                    PATTI SMITH #op1
                  </td>
                </tr>
                <tr>
                  <th
                    className="m-card__properties-label"
                    id="card-property-label-:r8:"
                    scope="row"
                  >
                    Last Login
                  </th>
                  <td
                    aria-labelledby="card-property-label-:r8:"
                    className="m-card__properties-value"
                  >
                    1 min; 5:40 PM
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;
